j--/tests/pass/OrAssign.java
package pass;

public class OrAssign {
	public int eval(int a, int b) {
		a |= b;
		return a;
	}
}
