j--/tests/fail/OrAssign.java
package fail;

public class OrAssign {

	public static void main(String args[]) {
		System.out.println("c" |= "b");
	}

}
